Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92099

TableView: content height doesn't change when adding new rows

XMLWordPrintable

    • d6a5afd120838647e0dd2a420dacf06389f0a48e (qt/qtdeclarative/dev) de3dfe2411180c2a4754f22a1a61b19a25099a2c (qt/tqtc-qtdeclarative/tqtc/lts-5.15) 032b12cd5074e4618f56668912465a4dca8d72f4 (qt/qtdeclarative/6.1)

      If you have a TableView with only a couple of rows, and you add a third one, the contentHeight doesn't update, even when all the rows in the model are visible inside the viewport. The same is also true for columns, if you add a row that changes the width of a column, and all columns are already visible, the contentWidth doesn't update.

        For Gerrit Dashboard: QTBUG-92099
        # Subject Branch Project Status CR V

            richard Richard Moe Gustavsen
            richard Richard Moe Gustavsen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: